--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "herokuserver2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.0.12",
-    "request": "^2.88.2",
-    "request-ip": "^2.1.3",
-    "request-promise": "^4.2.6",
-    "sniffr": "^1.2.0"
-  }
+    "name": "spamx",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.16.4",
+        "moment": "^2.29.1",
+        "nodemailer": "^6.4.2",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.6",
+        "sendmail": "^1.6.1"
+    }
 }
